<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:orientation="vertical"
    android:background="#9FC96F"
    android:gravity="bottom"
    android:padding="20dp">

    <ImageView
        android:id="@+id/Main_Menu_Logo"
        android:layout_width="111dp"
        android:layout_height="102dp"
        android:src="@drawable/hay_street_healthy_hub_logo"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/Main_Menu_Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/baloo"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/Main_Menu_WebAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acme"
        android:text="@string/Click_Website"
        android:textSize="14sp" />


</LinearLayout>