...
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatientHomeMenuActivity04"
    android:id="@+id/PatientHomeDrawerLayout"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
...
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/toolbar_menu_icon"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/PatientHomeCustomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/acme"
                android:paddingStart="30dp"
                android:text="@string/Patient_Home_Title"
                android:textColor="#FFFFFF"
...
