...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appointment_list_bg">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/appointment_listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <LinearLayout
        android:id="@+id/bookingButtonLayout"
...
